--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title: Site Title
+title: Cse031Sust02 Blog
 locale: en_US
-description: Describe your website here.
+description: This is a test blog
 logo: site-logo.png
 search: true
-url: http://localhost:4000
+url: http://hellogeekworld.github.io/
 
 # Jekyll configuration
 
@@ -37,10 +37,10 @@ owner:
   avatar: bio-photo.jpg
   email: you@email.com
   disqus-shortname:
-  twitter: #username
+  twitter: #cse031sust02
   facebook: #username
-  github: #username
-  stackexchange: #http://stackoverflow.com/users/123456/username
+  github: #cse031sust02
+  stackexchange: 
   linkedin: #username
   instagram: #username
   flickr: #username
